--- a/.tekton/tasks.yml
+++ b/.tekton/tasks.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   description: This task will clean up a workspace by deleting all the files.
   workspaces:
-    - name: -source
+    - name: source
   steps:
     - name: remove
       image: alpine:3
@@ -21,16 +21,9 @@ spec:
         #!/usr/bin/env sh
         set -eu
         echo "Removing all files from ${WORKSPACE_SOURCE_PATH} ..."
-        # Delete any existing contents of the directory if it exists.
-        #
-        # We don't just "rm -rf ${WORKSPACE_SOURCE_PATH}" because ${WORKSPACE_SOURCE_PATH} might be "/"
-        # or the root of a mounted volume.
         if [ -d "${WORKSPACE_SOURCE_PATH}" ] ; then
-          # Delete non-hidden files and directories
           rm -rf "${WORKSPACE_SOURCE_PATH:?}"/*
-          # Delete files and directories starting with . but excluding ..
           rm -rf "${WORKSPACE_SOURCE_PATH}"/.[!.]*
-          # Delete files and directories starting with .. plus any other character
           rm -rf "${WORKSPACE_SOURCE_PATH}"/..?*
         fi
 ---
@@ -49,11 +42,10 @@ spec:
   steps:
     - name: nosetests
       image: python:3.9-slim
-      workingDir: = $(workspaces.source.path)
+      workingDir: $(workspaces.source.path)
       script: |
         #!/bin/bash
         set -e
         python -m pip install --upgrade pip wheel
-  pip install -r requirements.txt
+        pip install -r requirements.txt
         nosetests $(params.args)
----
